Add integration checks for verikloak stack

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,3 +135,29 @@ jobs:
         with:
           name: bundler-audit-logs
           path: tmp/bundler-audit.log
+
+  integration:
+    name: Verikloak Integration
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
+        with:
+          persist-credentials: false
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435
+
+      - name: Docker Compose Build (cacheable)
+        run: docker compose build
+
+      - name: Run verikloak/verikloak-rails integration check
+        run: |
+          docker compose run --rm -u 0:0 dev bash -lc '
+            set -euo pipefail
+            cd integration
+            bundle update
+            bundle exec ruby check.rb
+          '
