Ensure integration bundle supports container platforms

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,6 +158,9 @@ jobs:
           docker compose run --rm -u 0:0 dev bash -lc '
             set -euo pipefail
             cd integration
+            bundle lock --add-platform ruby
+            bundle lock --add-platform x86_64-linux-musl
+            bundle lock --add-platform aarch64-linux-musl
             bundle update
             bundle exec ruby check.rb
           '
