--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,6 +158,7 @@ jobs:
           docker compose run --rm -u 0:0 dev bash -lc '
             set -euo pipefail
             cd integration
+            export BUNDLE_FROZEN=false
             bundle lock --add-platform ruby
             bundle lock --add-platform x86_64-linux-musl
             bundle lock --add-platform aarch64-linux-musl
