Install build deps for integration bundler

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,7 +158,13 @@ jobs:
           docker compose run --rm -u 0:0 -e BUNDLE_FROZEN=0 dev bash -lc '
             set -euo pipefail
             cd integration
+            apk add --no-cache --virtual .integration-build-deps \
+              build-base \
+              linux-headers \
+              openssl-dev \
+              yaml-dev
             bundle lock --add-platform ruby x86_64-linux-musl aarch64-linux-musl
             bundle update
             bundle exec ruby check.rb
+            apk del .integration-build-deps
           '
