--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,7 +163,8 @@ jobs:
               linux-headers \
               openssl-dev \
               yaml-dev
-            bundle install --jobs 4 --retry 3 --path vendor/bundle
+            bundle config set --local path vendor/bundle
+            bundle install --jobs 4 --retry 3
             bundle exec ruby check.rb
             apk del .integration-build-deps
           '
